--- a/app/src/main/res/layout/item_gallery_image.xml
+++ b/app/src/main/res/layout/item_gallery_image.xml
@@ -6,8 +6,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="1dp">
+        android:layout_height="wrap_content">
 
         <ImageView
             android:id="@+id/item_image"
