[refactor] DateFormatUtil 내 함수명 변경

--- a/app/src/main/res/layout/fragment_wish_item_detail.xml
+++ b/app/src/main/res/layout/fragment_wish_item_detail.xml
@@ -124,7 +124,7 @@
                         android:fontFamily="@font/suit_sb"
                         android:paddingHorizontal="@dimen/spacingSmall"
                         android:paddingVertical="@dimen/spacingMicro"
-                        android:text="@{viewModel.wishItem.notiType == null ? `` : DateFormatUtilKt.countDday(viewModel.wishItem.notiDate)}"
+                        android:text="@{viewModel.wishItem.notiType == null ? `` : DateFormatUtilKt.calculateDday(viewModel.wishItem.notiDate)}"
                         android:textColor="@color/gray_700"
                         android:textSize="14sp"
                         android:visibility="@{viewModel.wishItem.notiType == null ? View.INVISIBLE : View.VISIBLE}"
@@ -173,7 +173,7 @@
                         android:layout_height="0dp"
                         android:layout_marginEnd="20dp"
                         android:fontFamily="@font/nanum_square_r"
-                        android:text="@{DateFormatUtilKt.beforeTime(viewModel.wishItem.createAt)}"
+                        android:text="@{DateFormatUtilKt.getTimeBefore(viewModel.wishItem.createAt)}"
                         android:textColor="@color/gray_300"
                         android:textSize="@dimen/typographyDescription"
                         app:layout_constraintEnd_toEndOf="parent"
