--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -73,4 +73,28 @@
         <item name="fontFamily">@font/suit_m</item>
     </style>
 
+    <style name="My.Section.Title" parent="">
+        <item name="android:layout_marginTop">32dp</item>
+        <item name="android:layout_marginStart">@dimen/spacingBase</item>
+        <item name="android:layout_marginBottom">@dimen/spacing12</item>
+    </style>
+
+    <style name="My.Section.Title.TextAppearance" parent="">
+        <item name="android:textColor">@color/gray_700</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:fontFamily">@font/suit_sb</item>
+    </style>
+
+    <style name="My.Section.SubTitle" parent="">
+        <item name="android:paddingTop">@dimen/spacing12</item>
+        <item name="android:paddingBottom">@dimen/spacing12</item>
+        <item name="android:paddingStart">@dimen/spacingBase</item>
+        <item name="android:paddingEnd">@dimen/spacingBase</item>
+    </style>
+
+    <style name="My.Section.SubTitle.TextAppearance" parent="">
+        <item name="android:textColor">@color/gray_700</item>
+        <item name="android:textSize">@dimen/typographyBase</item>
+        <item name="android:fontFamily">@font/suit_r</item>
+    </style>
 </resources>
