[feat] 유저정보 업데이트 및 불러오기 구현

--- a/app/src/main/res/layout/fragment_my.xml
+++ b/app/src/main/res/layout/fragment_my.xml
@@ -69,6 +69,8 @@
                             android:id="@+id/profile_image"
                             android:layout_width="90dp"
                             android:layout_height="90dp"
+                            android:background="@drawable/shape_border_radius_45"
+                            android:scaleType="centerCrop"
                             android:src="@drawable/ic_background_user_profile"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
@@ -94,7 +96,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/spacingBase"
                         android:fontFamily="@font/montserrat_b"
-                        android:text="@{String.format(context.getString(R.string.my_nickname_format_for_users_without_nickname), viewModel.userNickname)}"
+                        android:text="@{viewModel.userNickname}"
                         android:textColor="@color/white"
                         android:textSize="18sp"
                         app:layout_constraintEnd_toEndOf="parent"
