[feat] 닉네임 및 프로필 이미지 수정하지 않은 경우, 완료 버튼 비활성화 처리

--- a/app/src/main/res/layout/fragment_profile_edit.xml
+++ b/app/src/main/res/layout/fragment_profile_edit.xml
@@ -142,7 +142,7 @@
             android:layout_marginHorizontal="@dimen/spacing20"
             android:layout_marginTop="@dimen/spacing20"
             android:background="@drawable/selector_button"
-            android:enabled="@{viewModel.inputUserNickname.length() > 0}"
+            android:enabled="@{viewModel.isEnabledEditCompleteButton()}"
             android:fontFamily="@font/suit_b"
             android:outlineProvider="none"
             android:paddingVertical="@dimen/spacingBase"
