--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -18,159 +18,122 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"
-        android:padding="20dp">
+        android:background="@color/white">
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="50dp"
-            android:orientation="vertical"
-            app:layout_constraintBottom_toTopOf="@id/first_visit_detail"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-            <TextView
+            <ImageButton
+                android:id="@+id/back"
+                style="@style/Widget.Button.Icon.Navigation"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:fontFamily="@font/noto_sans_kr_bold"
-                android:includeFontPadding="false"
-                android:text="Wish Board"
-                android:textColor="@color/gray_700"
-                android:textSize="25dp" />
+                android:onClick="@{(v) -> Navigation.findNavController(v).popBackStack()}"
+                android:src="@drawable/ic_back"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
+                style="@style/Widget.Tab.Detail.TextAppearance.Title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="40dp"
-                android:fontFamily="@font/nanum_square_b"
-                android:includeFontPadding="false"
-                android:text="Wishboard로 간편하게\n흩어져있는 위시리스트를 통합 관리해보세요!"
-                android:textColor="@color/gray_700"
-                android:textSize="15dp" />
+                android:text="@string/sign_in_title"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/email_input"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                app:layout_constraintTop_toTopOf="parent">
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
-                <ImageView
-                    android:id="@+id/email_icon"
-                    android:layout_width="28dp"
-                    android:layout_height="28dp"
-                    android:background="@android:color/transparent"
-                    android:src="@drawable/email"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <EditText
-                    android:id="@+id/email"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="7dp"
-                    android:background="@android:color/transparent"
-                    android:hint="@string/email_input_text"
-                    android:includeFontPadding="false"
-                    android:inputType="textEmailAddress"
-                    android:onTextChanged="@{viewModel::onLoginEmailTextChanged}"
-                    android:textSize="15dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toEndOf="@id/email_icon"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="0.5dp"
-                    android:layout_marginTop="5dp"
-                    android:background="@color/gray_700"
-                    app:layout_constraintTop_toBottomOf="@id/email_icon" />
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/password_input"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp"
-                app:layout_constraintTop_toTopOf="parent">
-
-                <ImageView
-                    android:id="@+id/password_icon"
-                    android:layout_width="28dp"
-                    android:layout_height="28dp"
-                    android:background="@android:color/transparent"
-                    android:src="@drawable/pw"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <EditText
-                    android:id="@+id/password"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="7dp"
-                    android:background="@android:color/transparent"
-                    android:hint="@string/password_input_text"
-                    android:includeFontPadding="false"
-                    android:inputType="textPassword"
-                    android:onTextChanged="@{viewModel::onLoginPasswordTextChanged}"
-                    android:textSize="15dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toEndOf="@id/password_icon"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="0.5dp"
-                    android:layout_marginTop="5dp"
-                    android:background="@color/gray_700"
-                    app:layout_constraintTop_toBottomOf="@id/password_icon" />
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-            <Button
-                android:id="@+id/signin_btn"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:background="@drawable/background_button_green"
-                android:fontFamily="@font/nanum_square_eb"
-                android:onClick="@{() -> viewModel.signIn()}"
-                android:outlineProvider="none"
-                android:text="@string/login_btn_text"
-                android:textColor="@color/gray_700"
-                android:textSize="15dp" />
-
-        </LinearLayout>
-
-        <TextView
-            android:id="@+id/first_visit_detail"
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guide_center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:fontFamily="@font/nanum_square_r"
-            android:text="@string/first_visit_detail"
-            android:textColor="@color/gray_700"
-            android:textSize="12dp"
-            app:layout_constraintBottom_toTopOf="@id/signup_btn"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.5" />
+
+        <ImageView
+            android:id="@+id/password_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:src="@drawable/ic_lock"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/toolbar" />
+
+        <EditText
+            android:id="@+id/email_input"
+            style="@style/Widget.EditText.Basic"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/email_input_text"
+            android:inputType="textEmailAddress"
+            android:onTextChanged="@{viewModel::onLoginEmailTextChanged}"
+            android:text="@{viewModel.registrationEmail}"
+            android:textAppearance="@style/Widget.EditText.Basic.TextAppearance"
+            app:layout_constraintBottom_toTopOf="@id/email_divider" />
+
+        <View
+            android:id="@+id/email_divider"
+            style="@style/Widget.EditText.Divider.Full"
+            android:layout_width="0dp"
+            android:layout_marginBottom="@dimen/spacingMicro"
+            app:layout_constraintBottom_toTopOf="@id/password_input"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+
+        <EditText
+            android:id="@+id/password_input"
+            style="@style/Widget.EditText.Basic"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/password_input_text"
+            android:inputType="textPassword"
+            android:onTextChanged="@{viewModel::onLoginPasswordTextChanged}"
+            android:paddingVertical="@dimen/spacing12"
+            android:text="@{viewModel.registrationPassword}"
+            android:textAppearance="@style/Widget.EditText.Basic.TextAppearance"
+            app:layout_constraintBottom_toTopOf="@id/password_divider" />
+
+        <View
+            android:id="@+id/password_divider"
+            style="@style/Widget.EditText.Divider.Full"
+            android:layout_width="0dp"
+            android:layout_marginBottom="@dimen/spacingBase"
+            app:layout_constraintBottom_toTopOf="@id/sign_in"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
         <Button
-            android:id="@+id/signup_btn"
+            android:id="@+id/sign_in"
+            style="@style/Widget.Button.Activate.Green"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:background="@drawable/background_button_line"
-            android:fontFamily="@font/nanum_square_eb"
-            android:onClick="@{v -> Navigation.findNavController(v).navigate(R.id.action_login_to_email)}"
-            android:outlineProvider="none"
-            android:text="@string/sign_up"
-            android:textColor="@color/gray_700"
-            android:textSize="15dp"
-            app:layout_constraintBottom_toBottomOf="parent" />
+            android:onClick="@{() -> viewModel.signIn()}"
+            android:text="@string/login_btn_text"
+            android:textAppearance="@style/Widget.Button.Basic.TextAppearance"
+            app:layout_constraintBottom_toBottomOf="@id/guide_center" />
+
+        <TextView
+            android:id="@+id/forgot_your_password"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/spacingSmall"
+            android:fontFamily="@font/suit_m"
+            android:padding="@dimen/spacing12"
+            android:text="@string/sign_in_forgot_your_password"
+            android:textColor="@color/gray_300"
+            android:textSize="@dimen/typographyDescription"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/sign_in" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
