--- a/app/src/main/res/layout/fragment_sign_up_email.xml
+++ b/app/src/main/res/layout/fragment_sign_up_email.xml
@@ -13,99 +13,116 @@
         <import type="com.hyeeyoung.wishboard.R" />
 
         <import type="androidx.navigation.Navigation" />
-
-        <import type="android.view.View" />
     </data>
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"
-        android:orientation="vertical"
-        android:padding="20dp">
+        android:background="@color/white">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp">
+            app:layout_constraintTop_toTopOf="parent">
 
             <ImageButton
                 android:id="@+id/back"
+                style="@style/Widget.Button.Icon.Navigation"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:background="@android:color/transparent"
-                android:onClick="@{v -> Navigation.findNavController(v).navigate(R.id.action_email_to_sign_in)}"
+                android:onClick="@{(v) -> Navigation.findNavController(v).popBackStack()}"
                 android:src="@drawable/ic_back"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                style="@style/Widget.Tab.Detail.TextAppearance.Title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/sign_up"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:fontFamily="@font/nanum_square_eb"
-                android:text="@string/sign_up"
+                android:layout_marginEnd="@dimen/spacingBase"
+                android:fontFamily="@font/suit_r"
+                android:text="@{String.format(context.getString(R.string.step_format), 1, 2)}"
                 android:textColor="@color/gray_700"
-                android:textSize="15dp"
+                android:textSize="@dimen/typographyBase"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="1/2 단계" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guide_center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.5" />
+
+        <ImageView
+            android:id="@+id/email_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:src="@drawable/ic_email"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/toolbar" />
+
+        <TextView
+            android:id="@+id/password_detail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/spacing10"
+            android:fontFamily="@font/suit_r"
+            android:gravity="center"
+            android:lineSpacingExtra="@dimen/spacingMicro"
+            android:text="@string/sign_up_email_guide_text"
+            android:textColor="@color/gray_700"
+            android:textSize="@dimen/typographyDescription"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/email_icon" />
+
+        <EditText
             android:id="@+id/email_input"
+            style="@style/Widget.EditText.Basic"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:layout_marginBottom="20dp"
-            app:layout_constraintTop_toTopOf="parent">
+            android:hint="@string/email_input_text"
+            android:inputType="textEmailAddress"
+            android:onTextChanged="@{viewModel::onRegistrationEmailTextChanged}"
+            android:text="@{viewModel.registrationEmail}"
+            android:textAppearance="@style/Widget.EditText.Basic.TextAppearance"
+            app:layout_constraintBottom_toTopOf="@id/divider" />
 
-            <ImageView
-                android:id="@+id/email_icon"
-                android:layout_width="28dp"
-                android:layout_height="28dp"
-                android:background="@android:color/transparent"
-                android:src="@drawable/email"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <EditText
-                android:id="@+id/email"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="7dp"
-                android:background="@android:color/transparent"
-                android:hint="@string/email_input_text"
-                android:includeFontPadding="false"
-                android:inputType="textEmailAddress"
-                android:onTextChanged="@{viewModel::onRegistrationEmailTextChanged}"
-                android:text="@{viewModel.registrationEmail}"
-                android:textSize="15dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@id/email_icon"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="0.5dp"
-                android:layout_marginTop="5dp"
-                android:background="@color/gray_700"
-                app:layout_constraintTop_toBottomOf="@id/email_icon" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        <View
+            android:id="@+id/divider"
+            style="@style/Widget.EditText.Divider.Full"
+            android:layout_width="0dp"
+            android:layout_marginBottom="@dimen/spacingBase"
+            app:layout_constraintBottom_toTopOf="@id/next"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
         <Button
             android:id="@+id/next"
+            style="@style/Widget.Button.Activate.Green"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:background="@drawable/selector_button"
-            android:fontFamily="@font/nanum_square_eb"
+            android:layout_height="wrap_content"
             android:onClick="@{v -> Navigation.findNavController(v).navigate(R.id.action_email_to_password)}"
-            android:outlineProvider="none"
             android:text="@string/next"
-            android:textColor="@color/gray_700"
-            android:textSize="15dp" />
-    </LinearLayout>
+            android:textAppearance="@style/Widget.Button.Basic.TextAppearance"
+            app:layout_constraintBottom_toTopOf="@id/guide_center"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
