--- a/app/src/main/res/layout/fragment_sign_up_password.xml
+++ b/app/src/main/res/layout/fragment_sign_up_password.xml
@@ -99,22 +99,14 @@
             style="@style/Widget.EditText.Basic"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/password_conditions_text"
+            android:layout_marginBottom="@dimen/spacingBase"
+            android:hint="@string/password_input_text"
             android:inputType="textPassword"
             android:onTextChanged="@{viewModel::onRegistrationPasswordTextChanged}"
             android:paddingVertical="@dimen/spacing12"
             android:text="@{viewModel.registrationPassword}"
             android:textAppearance="@style/Widget.EditText.Basic.TextAppearance"
-            app:layout_constraintBottom_toTopOf="@id/divider" />
-
-        <View
-            android:id="@+id/divider"
-            style="@style/Widget.EditText.Divider.Full"
-            android:layout_width="0dp"
-            android:layout_marginBottom="@dimen/spacingBase"
-            app:layout_constraintBottom_toTopOf="@id/next"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintBottom_toTopOf="@id/next" />
 
         <Button
             android:id="@+id/next"
